# DLS1

./: README.md  pyproject.toml
notebooks/: hw_1_game_of_thrones.ipynb  hw_3_kaggle.ipynb  hw_4_conv_cnn.ipynb  hw_5_simpsons_classification.ipynb  hw_6_semantic_segmentation.ipynb  hw_7_homework_detection.ipynb  hw_8_autoencoders.ipynb
